feat: update crud aeronave
